fix: Tweak image to prevent 1px gap

--- a/scss/_even-grid.scss
+++ b/scss/_even-grid.scss
@@ -135,7 +135,7 @@ $hover-class: "even-grid--contents";
 }
 
 .even-grid--image-wrapper {
-  margin-bottom: -$item-inner-padding;
+  margin-bottom: -$item-inner-padding - 0.1em;
 
   // Place above button
   position: relative;
